Add tests for center and altitude info - Center location verified - Max Altitude value tests added, but manual verification fails to prove correctness. This may means mean lack of understanding of the original code.

--- a/Tests/Tests.vcxproj
+++ b/Tests/Tests.vcxproj
@@ -122,6 +122,14 @@
       <DeploymentContent>true</DeploymentContent>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="data\maps\onlydirt.scm">
+      <DeploymentContent>true</DeploymentContent>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="data\maps\onlywater.scm">
+      <DeploymentContent>true</DeploymentContent>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="data\maps\sscai\(2)Benzene.scx">
       <DeploymentContent>true</DeploymentContent>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
