--- a/Tests/Tests.vcxproj.filters
+++ b/Tests/Tests.vcxproj.filters
@@ -322,5 +322,14 @@
     <None Include="data\maps\onlydirt.scm">
       <Filter>External\data\maps</Filter>
     </None>
+    <None Include="data\maps\resources.scm">
+      <Filter>External\data\maps</Filter>
+    </None>
+    <None Include="data\maps\resources_usual.scm">
+      <Filter>External\data\maps</Filter>
+    </None>
+    <None Include="data\maps\resources_smallamount.scm">
+      <Filter>External\data\maps</Filter>
+    </None>
   </ItemGroup>
 </Project>
