Prevent crashing on the Sparkle 1.1 map - Allow neutral units overlap existing minerals and geysers - Allow non maps which contain non special buildings.

--- a/Tests/Tests.vcxproj
+++ b/Tests/Tests.vcxproj
@@ -123,6 +123,10 @@
       <DeploymentContent>true</DeploymentContent>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="data\maps\(4)Sparkle 1.1.scx">
+      <DeploymentContent>true</DeploymentContent>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="data\maps\geysers_only_bases.scx">
       <DeploymentContent>true</DeploymentContent>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
