Split CMake file onto three pieces - Fist piece is for main project - Second piece is for test project -Third piece is for building whole piece. Main project intended to be consumed by downstream libraries.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,14 +8,9 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
 set(OPENBW_DIR ${PROJECT_SOURCE_DIR}/external/openbw)
+set(BWEM_DIR ${PROJECT_SOURCE_DIR}/BWEM)
+set(BWAPI_DIR ${PROJECT_SOURCE_DIR}/external/openbw-bwapi)
 
-include_directories(
-  ${PROJECT_SOURCE_DIR}/external/openbw-bwapi/bwapi/include
-)
-add_subdirectory(${PROJECT_SOURCE_DIR}/external/openbw-bwapi/bwapi/BWAPILIB)
-add_subdirectory(${PROJECT_SOURCE_DIR}/external/openbw-bwapi/bwapi/OpenBWData)
-add_subdirectory(${PROJECT_SOURCE_DIR}/external/openbw-bwapi/bwapi/BWAPICore)
-add_subdirectory(${PROJECT_SOURCE_DIR}/external/openbw-bwapi/bwapi/BWAPI)
 include_directories(
   ${PROJECT_SOURCE_DIR}/external/openbw-bwapi/bwapi/Util/Source
   ${PROJECT_SOURCE_DIR}/external/openbw-bwapi/BWAPI/openbw
@@ -24,77 +19,13 @@ include_directories(
   ${PROJECT_SOURCE_DIR}/external/openbw-bwapi/BWAPI/Source
   ${PROJECT_SOURCE_DIR}/external/openbw-bwapi/BWAPICore
   ${PROJECT_SOURCE_DIR}/external/openbw-bwapi/Shared
-)
-
-include_directories(
-  ${PROJECT_SOURCE_DIR}/BWEM/include
   ${PROJECT_SOURCE_DIR}/external/openbw-bwapi/bwapi/include
 )
 
-set(GOOGLETEST_ROOT
-  external/googletest/googletest CACHE STRING "Google Test source root"
-)
+add_subdirectory(${PROJECT_SOURCE_DIR}/external/openbw-bwapi/bwapi/BWAPILIB)
+add_subdirectory(${PROJECT_SOURCE_DIR}/external/openbw-bwapi/bwapi/OpenBWData)
+add_subdirectory(${PROJECT_SOURCE_DIR}/external/openbw-bwapi/bwapi/BWAPICore)
+add_subdirectory(${PROJECT_SOURCE_DIR}/external/openbw-bwapi/bwapi/BWAPI)
 
-set(GOOGLETEST_SOURCES
-  ${PROJECT_SOURCE_DIR}/${GOOGLETEST_ROOT}/src/gtest-all.cc
-  ${PROJECT_SOURCE_DIR}/${GOOGLETEST_ROOT}/src/gtest_main.cc
-)
-
-include_directories(
-  ${PROJECT_SOURCE_DIR}/${GOOGLETEST_ROOT}
-  ${PROJECT_SOURCE_DIR}/${GOOGLETEST_ROOT}/include
-)
-
-add_library(googletest
-  ${GOOGLETEST_SOURCES}
-)
-
-
-file(GLOB bwemSources
-  ${PROJECT_SOURCE_DIR}/BWEM/src/*.cpp
-)
-add_library(BWEBlib
-  ${bwemSources}
-)
-
-if(MSVC)
-	target_compile_options(BWEBlib PUBLIC "/permissive-")
-endif()
-
-target_link_libraries(BWEBlib
-  BWAPILIB
-)
-
-
-include_directories(
-  ${PROJECT_SOURCE_DIR}/external/openbw-bwapi/bwapi/BWAPI/Source
-  ${PROJECT_SOURCE_DIR}/external/openbw-bwapi/bwapi/BWAPICore
-  ${PROJECT_SOURCE_DIR}/external/openbw-bwapi/bwapi/OpenBWData
-  ${PROJECT_SOURCE_DIR}/external/openbw
-  ${PROJECT_SOURCE_DIR}/${GOOGLETEST_ROOT}
-  ${PROJECT_SOURCE_DIR}/${GOOGLETEST_ROOT}/include
-)
-
-file(GLOB testsources
-	#${GOOGLETEST_SOURCES}
-  ${PROJECT_SOURCE_DIR}/tests/*.cpp
-)
-add_library(BWData ALIAS OpenBWData)
-add_executable(tests
-  ${testsources}
-  $<TARGET_OBJECTS:BWAPIObj>
-  $<TARGET_OBJECTS:BWAPICore>
-  ${PROJECT_SOURCE_DIR}/external/openbw-bwapi/bwapi/OpenBWData/BW/BWData.cpp
-)
-
-target_link_libraries(tests
-  googletest
-  BWEBlib
-  BWAPILIB
-)
-
-include(CTest)
-enable_testing()
-
-add_test(unit ${PROJECT_BINARY_DIR}/tests)
-file(COPY Tests/data DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+add_subdirectory(${PROJECT_SOURCE_DIR}/BWEM)
+add_subdirectory(${PROJECT_SOURCE_DIR}/Tests)
