--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -8,16 +8,16 @@ clone_depth: 5
 install:
   - git submodule update --init --recursive
   - ps: >-
+      Invoke-WebRequest 'https://github.com/kovarex/BhaalBot/raw/master/Starcraft/BROODAT.MPQ' -OutFile 'C:/projects/bwem-community/BrooDat.mpq'
       if($isWindows) {
         nuget restore
       }
 
+before_build:
+  - ps: Invoke-WebRequest 'https://github.com/kovarex/BhaalBot/raw/master/Starcraft/STARDAT.MPQ' -OutFile 'C:/projects/bwem-community/StarDat.mpq'
+
 before_test:
-  - ps: Invoke-WebRequest 'https://github.com/kovarex/BhaalBot/raw/master/Starcraft/BROODAT.MPQ' -OutFile 'C:/projects/bwem-community/BrooDat.mpq'
-  - cmd: timeout 5 > NUL
-  - ps: Invoke-WebRequest 'https://github.com/kovarex/BhaalBot/raw/master/Starcraft/STARDAT.MPQ' -OutFile 'C:/projects/bwem-community/StarDat.mpq.enc'
-  - cmd: timeout 5 > NUL
-  - ps: Invoke-WebRequest 'https://github.com/kovarex/BhaalBot/raw/master/Starcraft/patch_rt.mpq' -OutFile 'C:/projects/bwem-community/patch_rt.mpq.enc'
+  - ps: Invoke-WebRequest 'https://github.com/kovarex/BhaalBot/raw/master/Starcraft/patch_rt.mpq' -OutFile 'C:/projects/bwem-community/patch_rt.mpq'
   - cmd: move *.mpq %CONFIGURATION%/
 
 build:
