--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -7,8 +7,8 @@ clone_depth: 5
 
 install:
   - git submodule update --init --recursive
+  - ps: Invoke-WebRequest 'https://github.com/kovarex/BhaalBot/raw/master/Starcraft/BROODAT.MPQ' -OutFile 'C:/projects/bwem-community/BrooDat.mpq'
   - ps: >-
-      Invoke-WebRequest 'https://github.com/kovarex/BhaalBot/raw/master/Starcraft/BROODAT.MPQ' -OutFile 'C:/projects/bwem-community/BrooDat.mpq'
       if($isWindows) {
         nuget restore
       }
