--- a/Tests/Tests.vcxproj
+++ b/Tests/Tests.vcxproj
@@ -256,6 +256,7 @@
       <WarningLevel>Level3</WarningLevel>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <AdditionalIncludeDirectories>../external/openbw-bwapi/bwapi/include;../external/openbw-bwapi/bwapi/Util/Source;../external/openbw-bwapi/bwapi/Shared;../external/openbw-bwapi/bwapi/BWAPI/Source;../external/openbw-bwapi/bwapi/OpenBWData;../external/openbw-bwapi/bwapi/BWAPICore;../external/openbw-bwapi/bwapi/BWAPI/Source/BWAPI;../external/openbw;../BWEM/include;../external/json/include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
